# peoplevision-ai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  debug_counter.py  docker-compose.yml  pyproject.toml  requirements.txt  scan_cameras.py  verify_direction.py
app/: __init__.py  api.py  camera.py  config.py  counter.py  database.py  detector.py  main.py  tracker.py  utils.py
dashboard/: streamlit_app.py
data/: .gitkeep
tests/: test_api.py  test_counter.py  test_detector.py  test_tracker.py
tests/mocks/: ultralytics.py
tests/mocks/supervision/: __init__.py
